--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,16 @@ fastapi~=0.115.6
 spacedirectory~=0.0.5
 pillow~=11.0.0
 brother-ql
-qrcode[pil]
+qrcode[pil]~=8.0
+python-escpos
+sqlmodel~=0.0.22
+starlette~=0.42.0
+pydantic~=2.10.3
+pyzmq~=26.2.0
+imutils~=0.5.4
+matplotlib~=3.10.0
+numpy~=2.2.0
+opencv-python~=4.10.0.84
+requests~=2.32.3
+urllib3~=2.2.3
+rich~=13.9.4
